# yandex-cloud-ml-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Mow bot  README.md  conftest.py  pyproject.toml  test_requirements.txt  test_requirements_extra.txt  tox.ini
.github/workflows/: tests.yaml
compat/yandex-cloud-ml-sdk/: LICENSE  MIGRATION.md  README.md  pyproject.toml
compat/yandex-cloud-ml-sdk/tests/: conftest.py  test_logging.py
docs/: auth.rst  conf.py  index.rst  requirements.txt  retry.rst  types.rst
docs/async/: assistants.rst  batch.rst  datasets.rst  files.rst  runs.rst  sdk.rst  search_api.rst  search_indexes.rst  threads.rst  tools.rst  tuning.rst
docs/async/chat/: completions.rst  domain.rst  text_embeddings.rst
docs/async/models/: completions.rst  domain.rst  image_generation.rst  text_classifiers.rst  text_embeddings.rst
docs/async/speechkit/: domain.rst  text_to_speech.rst
docs/async/tools/: domain.rst  types.rst
docs/base/: bases.rst  completions.rst.inc  index.rst  models.rst.inc
docs/internals/: bases.rst  client.rst  index.rst
docs/sync/: assistants.rst  batch.rst  datasets.rst  files.rst  runs.rst  sdk.rst  search_api.rst  search_indexes.rst  threads.rst  tools.rst  tuning.rst
docs/sync/chat/: completions.rst  domain.rst  text_embeddings.rst
docs/sync/models/: completions.rst  domain.rst  image_generation.rst  text_classifiers.rst  text_embeddings.rst
docs/sync/speechkit/: domain.rst  text_to_speech.rst
docs/types/: assistants.rst  batch.rst  datasets.rst  index.rst  message.rst  model_results.rst  operation.rst  other.rst  runs.rst  search_api.rst  search_indexes.rst  speechkit.rst  tools.rst  tuning.rst
examples/async/assistants/: assistant_with_search_index.py  assistants.py  assistants_with_index.py  example_file  files.py  gen_search.py  hybrid_search_index.py  maldives_example.txt  prompt_truncation_options.py  rephraser.py  runs.py  search_index_call_strategy.py  search_indexes.py  search_query.txt  structured_output.py  threads.py
examples/async/batch/: completions.jsonlines  completions.py  manage.py
examples/async/chat/: embeddings.py  extra_query.py  function_calling.py  history.py  multimodal.py  reasoning.py  run.py  stream.py  stream_function_calling.py  structured_output.py  tool_choice.py
examples/async/completions/: batch.py  batch_async.py  chat.py  function.py  function_calling  run.py  run_async.py  run_deferred.py  run_stream.py  structured_output.py  tokenize.py  tokenize_.py
examples/async/datasets/: download.py  errors_handling.py  read.py  upload.py  upload_schemas.py
examples/async/image_generation/: run_deferred.py
examples/async/misc/: grpc_credentials.py  realtime_voice.py
examples/async/search_api/: integrations.py
examples/async/text_classifiers/: run.py  run_few_shot.py
examples/async/text_embeddings/: run.py
examples/async/tuning/: attach.py  basic_train_and_use.py  big_datasets.py  binary_classification.jsonlines  binary_classification.py  cancel.py  datasets.py  embeddings.py  embeddings_pair.py  embeddings_triplet.jsonlines  example_dataset  list.py  multiclass_classification.py  multilabel_classification.jsonlines  multilabel_classification.py  reporting.py  tuning.py  tuning_params.py
examples/completions/: async_batch_async.py  async_run_async.py  async_run_sync.py  chat_async.py  run_async.py  run_stream_async.py  run_stream_sync.py  run_sync.py  tokenize_async.py  tokenize_sync.py
examples/langchain/chat/: ainvoke.py  astream.py  invoke.py  stream.py
examples/sync/assistants/: assistant_with_search_index.py  assistants.py  files.py  function_calling  gen_search.py  hybrid_search_index.py  prompt_truncation_options.py  rephraser.py  runs.py  search_index_call_strategy.py  search_indexes.py  structured_output.py  threads.py  turkey_example.txt
examples/sync/batch/: manage.py
examples/sync/chat/: embeddings.py  extra_query.py  function_calling.py  history.py  multimodal.py  reasoning.py  run.py  stream.py  stream_function_calling.py  structured_output.py  tool_choice.py
examples/text_classifications/: few_shot_run_async.py  few_shot_run_sync.py  run_async.py  run_sync.py
examples/text_classifiers/: few_shot_run_async.py  few_shot_run_sync.py  run_async.py  run_sync.py
examples/text_embeddings/: run_async.py  run_sync.py
src/yandex_ai_studio_sdk/: __init__.py  _authorization.py  _client.py  _exceptions.py  _sdk.py  exceptions.py  retry.py  search_api.py
src/yandex_cloud_ml_sdk/: __init__.py  _auth.py  _authorization.py  _client.py  _exceptions.py  _logging.py  _retry.py  _sdk.py  _types.py  assistants.py  auth.py  exceptions.py  search_api.py  search_indexes.py
tests/: conftest.py  test_client.py  test_logging.py  test_retries.py  test_sync_sdk.py
tests/assistants/: conftest.py  test_assistants.py  test_files.py  test_function_call.py  test_gen_search.py  test_messages.py  test_rephraser.py  test_run.py  test_search_indexes.py  test_structured_output.py  test_threads.py
tests/auth/: conftest.py  test_api_key.py  test_env_iam_token.py  test_get_auth_provider.py  test_iam_token.py  test_metadata.py  test_no_auth.py  test_oauth_token.py  test_yc_cli.py
tests/authorization/: test_folder_id.py
tests/batch/: test_batch.py  test_completions.py
tests/chat/: test_completions.py  test_embeddings.py  test_messages.py  test_uri_parser.py
tests/datasets/: conftest.py  test_datasets.py  test_download_datasets.py  test_read.py
tests/langchain_/: test_chat.py
tests/models/: test_completions.py  test_image_generation.py  test_text_classifiers.py  test_text_embeddings.py
tests/search_api/: test_by_image.py  test_generative.py  test_image.py  test_web.py
tests/speechkit/: test_enums.py  test_tts.py  test_tts_bistream.py
tests/tools/: test_function.py
tests/tuning/: test_text_embeddings.py
tests/types/: test_enum.py  test_expiration.py  test_structured_output.py
tests/utils/: test_doc.py  test_lock.py  test_packages.py
tools/search_index/: USER_GUIDE.md  __init__.py  __main__.py  constants.py  uploader.py
(+627 files in other folders)
